--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,16 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@pages/*": ["pages/*"],
+      "@shared/*": ["shared/*"],
+      "@home/*": ["pages/home/*"],
+      "@icon/*": ["shared/assets/icon/*"],
+      "@img/*": ["shared/assets/img/*"]
+    }
   },
   "include": ["src"]
 }
